retoques en botonera

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -5,9 +5,12 @@
         <ul class="sidebar-nav">
             <li class="sidebar-brand">
                 <a href="#">
-                    Start Bootstrap
+                    Lexito
                 </a>
             </li>
+            <% if user_signed_in? %>
+              <li><%= link_to t('botonera.users'), users_path %></li>
+            <% end %>
             <li>
                 <a href="#">Dashboard</a>
             </li>
