--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,6 @@
-<% content_for :title do %>About<% end %>
-<h3>About the Website</h3>
+<% content_for :title do %>Acerca de<% end %>
+<h3>Lexito</h3>
 <p>
-This web application was created with
-<%= link_to('Rails Composer', 'http://railsapps.github.io/rails-composer/') %>
-from the <%= link_to('RailsApps project', 'http://railsapps.github.io/') %>.
+Esta aplicación web ha sido creada por <%= link_to 'Sergio A. Alonso', 'http://about.me/elbunker' %> mediante 
+<%= link_to('Rails Composer', 'http://railsapps.github.io/rails-composer/') %> de el <%= link_to('Proyecto RailsApps', 'http://railsapps.github.io/') %>
 </p>
