--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,5 +2,5 @@
 <h3>Lexito</h3>
 <p>
 Esta aplicación web ha sido creada por <%= link_to 'Sergio A. Alonso', 'http://about.me/elbunker' %> mediante 
-<%= link_to('Rails Composer', 'http://railsapps.github.io/rails-composer/') %> de el <%= link_to('Proyecto RailsApps', 'http://railsapps.github.io/') %>
+<%= link_to('Rails Composer', 'http://railsapps.github.io/rails-composer/') %> del <%= link_to('Proyecto RailsApps', 'http://railsapps.github.io/') %>
 </p>
