--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,48 +1,9 @@
 <% if user_signed_in? %>
-  <div id="wrapper">
+  <h1>Bienvenido</h1>
+  <p>Para comenzar, utilice las funciones del <code>menu superior</code>.</p>
 
-  <!-- Sidebar -->
-  <div id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-      <li class="sidebar-brand">
-      <a href="#">
-        Lexito
-      </a>
-      </li>
-      <li><%= link_to t('botonera.users'), users_path %></li>
-      <li><%= link_to 'Expedientes', expedients_path %></li>
-    </ul>
-  </div>
-  <!-- /#sidebar-wrapper -->
-
-  <!-- Page Content -->
-  <div id="page-content-wrapper">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-12">
-          <h1>Simple Sidebar</h1>
-          <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-          <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-          <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- /#page-content-wrapper -->
-
-</div>
-<!-- /#wrapper -->
-
-            <% else %>
+<% else %>
   <h4>Lexito</h4>
-<p>Sistema simple de control de expedientes<p/>
-
+  <p>Sistema simple de control de expedientes<p/>
 
 <% end %>
-<!-- Menu Toggle Script -->
-<script>
-$("#menu-toggle").click(function(e) {
-    e.preventDefault();
-    $("#wrapper").toggleClass("toggled");
-    });
-</script>
