--- a/app/views/expedients/edit.html.erb
+++ b/app/views/expedients/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editar expediente</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Mostrar', @expedient %> |
+<%#<%= link_to 'Show', @expedient %> 
 <%= link_to 'Volver', expedients_path %>
