--- a/app/views/expedients/edit.html.erb
+++ b/app/views/expedients/edit.html.erb
@@ -1,3 +1,6 @@
+<p></p>
+<p>Expediente creado el <%= @expedient.created_at  %></p>
+<p>Última modificación <%= @expedient.updated_at  %></p>
 
 <%= render 'form' %>
 
