--- a/app/views/expedients/index.html.erb
+++ b/app/views/expedients/index.html.erb
@@ -4,18 +4,19 @@
 
 <h1>Expedientes</h1>
 
-<div class="container">
-  <div class="row">
-    <h3>Users</h3>
-    <div class="column">
-      <table class="table">
+<h3>Users</h3>
+<div class="table-responsive">
+<%#<div class="container">%>
+  <%#<div class="row">%>
+    <%#<div class="column">%>
+      <table class="table table-condensed">
 
         <thead>
           <tr>
             <th>Número</th>
             <th>Carátula</th>
-            <th>Actor</th>
-            <th>Demandado</th>
+            <%#<th>Actor</th>%>
+            <%#<th>Demandado</th>%>
             <th colspan="2"></th>
           </tr>
         </thead>
@@ -25,20 +26,21 @@
           <tr>
           <td><%= expedient.numero %></td>
           <td><%= expedient.caratula %></td>
-          <td><%= expedient.actor %></td>
-          <td><%= expedient.demandado %></td>
+          <%#<td><%= expedient.actor %></td>
+          <%#<td><%= expedient.demandado %></td>
           <td><%= link_to 'Edit', edit_expedient_path(expedient) %></td>
           <td><%= link_to 'Destroy', expedient, method: :delete, data: { confirm: 'Esta seguro?' } %></td>
         </tr>
       <% end %>
         </tbody>
       </table>
-    </div>
-  </div>
+    <%#</div>%>
+  <%#</div>%>
+<%#</div>%>
+
+<%#</table>%>
+
 </div>
-
-</table>
-
 <br>
 
 
